--- a/app/src/main/res/layout/activity_meal_list.xml
+++ b/app/src/main/res/layout/activity_meal_list.xml
@@ -6,21 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".activity_meal_list">
 
-    <Button
-        android:id="@+id/btn_calendar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="Calendar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recycler_meal_list" />
-
     <TextView
         android:id="@+id/txt_meal_list"
         android:layout_width="wrap_content"
@@ -36,8 +21,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_meal_list"
-        android:layout_width="399dp"
-        android:layout_height="453dp"
+        android:layout_width="393dp"
+        android:layout_height="589dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
@@ -45,5 +30,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_meal_list" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_meal_list"
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
