--- a/app/src/main/res/layout/activity_weekly_calendar.xml
+++ b/app/src/main/res/layout/activity_weekly_calendar.xml
@@ -29,6 +29,7 @@
         android:layout_marginEnd="8dp"
         android:text="Weekly Plan"
         android:textSize="36sp"
+        app:layout_constraintBottom_toTopOf="@+id/recycler_weekly"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -38,18 +39,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:text="Left"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recycler_weekly" />
 
     <Button
         android:id="@+id/btn_weekly_right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="8dp"
         android:text="Right"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recycler_weekly" />
 </androidx.constraintlayout.widget.ConstraintLayout>
