--- a/app/src/main/res/layout/activity_meal_list.xml
+++ b/app/src/main/res/layout/activity_meal_list.xml
@@ -6,6 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".activity_meal_list">
 
+    <Button
+        android:id="@+id/btn_add_meal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
+        android:text="Add meal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recycler_meal_list" />
+
     <TextView
         android:id="@+id/txt_meal_list"
         android:layout_width="wrap_content"
@@ -14,6 +28,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:text="Meals"
+        android:textColor="@color/colorPrimaryText"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,8 +36,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_meal_list"
-        android:layout_width="393dp"
-        android:layout_height="589dp"
+        android:layout_width="367dp"
+        android:layout_height="483dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
