--- a/app/src/main/res/layout/layout_listitem_meals.xml
+++ b/app/src/main/res/layout/layout_listitem_meals.xml
@@ -9,7 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        android:textSize="19sp"/>
+        android:textColor="@color/colorPrimaryText"
+        android:textSize="19sp" />
 
     <TextView
         android:id="@+id/txt_ing_fixed"
@@ -17,7 +18,7 @@
         android:layout_height="wrap_content"
         android:text="Ingredients:"
         android:layout_below="@+id/txt_meal_name"
-        android:layout_marginTop="20sp"
+        android:layout_marginTop="18sp"
         android:textSize="17dp"/>
 
     <TextView
@@ -27,7 +28,7 @@
         android:text="TextView"
         android:layout_toRightOf="@+id/txt_ing_fixed"
         android:layout_below="@id/txt_meal_name"
-        android:layout_marginTop="20sp"
+        android:layout_marginTop="18sp"
         android:textSize="17dp"
         android:layout_marginLeft="10dp"/>
 </RelativeLayout>
