--- a/app/src/main/res/layout/layout_listitem_week.xml
+++ b/app/src/main/res/layout/layout_listitem_week.xml
@@ -9,7 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        android:textSize="19sp"/>
+        android:textColor="@color/colorPrimaryText"
+        android:textSize="19sp" />
 
     <TextView
         android:id="@+id/txt_meal_name_week"
@@ -17,7 +18,7 @@
         android:layout_height="wrap_content"
         android:text="TextView"
         android:layout_below="@+id/txt_name"
-        android:layout_marginTop="20sp"
+        android:layout_marginTop="22sp"
         android:textSize="17dp"/>
 
 </RelativeLayout>
