--- a/app/src/main/res/layout/activity_weekly_calendar.xml
+++ b/app/src/main/res/layout/activity_weekly_calendar.xml
@@ -28,6 +28,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:text="Weekly Plan"
+        android:textColor="@color/colorPrimaryText"
         android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/recycler_weekly"
         app:layout_constraintEnd_toEndOf="parent"
