Added grocery list option from calendar and corresponding activity and fixed calendar options bug when onActivityResult

--- a/app/src/main/res/menu/menu_calendar_settings.xml
+++ b/app/src/main/res/menu/menu_calendar_settings.xml
@@ -7,4 +7,7 @@
     <item
         android:id="@+id/option_clear_selected"
         android:title="Clear Selected Days" />
+    <item
+        android:id="@+id/option_grocery_list"
+        android:title="Create Grocery List" />
 </menu>
