--- a/app/src/main/res/menu/menu_calendar_settings.xml
+++ b/app/src/main/res/menu/menu_calendar_settings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
     <item
         android:id="@+id/option_plan_selected"
         android:title="Plan For Selected Dates" />
@@ -12,10 +13,19 @@
         android:title="Create Grocery List" />
     <item
         android:id="@+id/option_stop_selection"
-        android:checkable="true"
         android:enabled="false"
         android:title="Stop selection"
         android:icon="@drawable/ic_cross"
         android:visible="false"
-        app:showAsAction="ifRoom"></item>
+        app:showAsAction="always"></item>
+
+    <item
+        android:id="@+id/option_check_box"
+        android:checkable="true"
+        android:title="select all"
+        android:visible="false"
+        android:enabled="false"
+        app:showAsAction="always"
+        app:actionViewClass="android.widget.CheckBox" />
+
 </menu>
