--- a/app/src/main/res/menu/menu_meal_settings.xml
+++ b/app/src/main/res/menu/menu_meal_settings.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/option_add_recipe"
+        android:title="Add Recipe" />
+
+    <item
         android:id="@+id/option_delete"
         android:title="Remove Meal"
         />
+
 </menu>
