--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -7,7 +7,7 @@
     tools:context=".activity_recipe">
 
     <EditText
-        android:id="@+id/Etxt_recipe_time"
+        android:id="@+id/etxt_recipe_time"
         android:layout_width="144dp"
         android:layout_height="45dp"
         android:layout_marginStart="8dp"
@@ -32,7 +32,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Etxt_recipe_time" />
+        app:layout_constraintTop_toBottomOf="@+id/etxt_recipe_time" />
 
     <Button
         android:id="@+id/btn_add_step"
