--- a/app/src/main/res/layout/activity_weekly_calendar.xml
+++ b/app/src/main/res/layout/activity_weekly_calendar.xml
@@ -2,10 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/weekly_screen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity_weekly_calendar"
-    android:id="@+id/weekly_screen">
+    android:background="@color/colorBackground"
+    tools:context=".activity_weekly_calendar">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_weekly"
@@ -28,7 +29,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:text="Weekly Plan"
-        android:textColor="@color/colorPrimaryText"
+        android:textColor="@color/colorLightText"
         android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/recycler_weekly"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,7 +43,9 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
+        android:background="@color/colorAccent"
         android:text="Left"
+        android:textColor="@color/colorLightText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recycler_weekly" />
@@ -54,7 +57,9 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="8dp"
+        android:background="@color/colorAccent"
         android:text="Right"
+        android:textColor="@color/colorLightText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recycler_weekly" />
