--- a/app/src/main/res/layout/activity_add_ingredient.xml
+++ b/app/src/main/res/layout/activity_add_ingredient.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     tools:context=".activity_add_ingredient">
 
     <TextView
@@ -14,8 +15,9 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:text="New Ingredient"
-        android:textColor="@color/colorPrimaryText"
+        android:textColor="@color/colorLightText"
         android:textSize="36sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -31,6 +33,8 @@
         android:hint="Name"
         android:inputType="textPersonName"
         android:textAlignment="center"
+        android:textColor="@color/colorLightText"
+        android:textColorHint="@color/colorPrimaryLight"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_ing_main" />
@@ -46,6 +50,8 @@
         android:hint="Amount"
         android:inputType="number"
         android:textAlignment="center"
+        android:textColor="@color/colorLightText"
+        android:textColorHint="@color/colorPrimaryLight"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,6 +69,8 @@
         android:hint="Unit"
         android:inputType="textPersonName"
         android:textAlignment="center"
+        android:textColor="@color/colorLightText"
+        android:textColorHint="@color/colorPrimaryLight"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,24 +82,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
+        android:background="@color/colorAccent"
         android:text="Save"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="@color/colorLightText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/etxt_amount" />
 
     <Button
         android:id="@+id/btn_delIng"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="256dp"
+        android:background="@color/colorAccent"
         android:text="Delete"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="@color/colorLightText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_addIng" />
