--- a/app/src/main/res/layout/layout_listitem.xml
+++ b/app/src/main/res/layout/layout_listitem.xml
@@ -10,26 +10,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        android:textColor="@color/colorPrimaryText"
+        android:textColor="@color/colorLightText"
         android:textSize="19sp" />
 
     <TextView
         android:id="@+id/txt_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
         android:layout_below="@+id/txt_name"
         android:layout_marginTop="18sp"
-        android:textSize="17dp"/>
+        android:text="TextView"
+        android:textColor="@color/colorPrimaryLight"
+        android:textSize="17dp" />
 
     <TextView
         android:id="@+id/txt_unit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:layout_toRightOf="@+id/txt_amount"
         android:layout_below="@id/txt_name"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="18sp"
-        android:textSize="17dp"
-        android:layout_marginLeft="10dp"/>
+        android:layout_toRightOf="@+id/txt_amount"
+        android:text="TextView"
+        android:textColor="@color/colorPrimaryLight"
+        android:textSize="17dp" />
 </RelativeLayout>
