--- a/app/src/main/res/layout/layout_listitem_recipe.xml
+++ b/app/src/main/res/layout/layout_listitem_recipe.xml
@@ -12,18 +12,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="step"
-        android:textColor="@color/colorPrimaryText"
+        android:textColor="@color/colorLightText"
         android:textSize="19sp" />
 
     <TextView
         android:id="@+id/txt_recipe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textColor="@color/colorPrimaryText"
-        android:textSize="19sp"
+        android:layout_marginLeft="20dp"
         android:layout_toRightOf="@+id/txt_stepCount"
-        android:layout_marginLeft="20dp" />
+        android:text="TextView"
+        android:textColor="@color/colorLightText"
+        android:textSize="19sp" />
 
     <EditText
         android:id="@+id/etxt_recipe"
