--- a/app/src/main/res/layout/layout_listitem_week.xml
+++ b/app/src/main/res/layout/layout_listitem_week.xml
@@ -11,16 +11,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        android:textColor="@color/colorPrimaryText"
+        android:textColor="@color/colorLightText"
         android:textSize="19sp" />
 
     <TextView
         android:id="@+id/txt_meal_name_week"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
         android:layout_below="@+id/txt_name"
         android:layout_marginTop="22sp"
-        android:textSize="17dp"/>
+        android:text="TextView"
+        android:textColor="@color/colorLightText"
+        android:textSize="17dp" />
 
 </RelativeLayout>
