--- a/app/src/main/res/layout/layout_listitem_meals.xml
+++ b/app/src/main/res/layout/layout_listitem_meals.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="wrap_content"
-    android:background="?android:attr/selectableItemBackground"
-    android:padding="15dp"
-    android:id="@+id/parent_layout_meals">
+    android:id="@+id/parent_layout_meals"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="?attr/selectableItemBackground"
+    android:padding="15dp">
 
     <TextView
         android:id="@+id/txt_meal_name"
