Added deletion icons and backpress on main activity pop up confirmation

--- a/app/src/main/res/menu/menu_ingredient_settings.xml
+++ b/app/src/main/res/menu/menu_ingredient_settings.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/option_delete_ing"
-        android:title="Remove Ingredient" />
+        android:title="Remove Ingredient"
+        android:icon="@drawable/ic_delete_24dp"
+        app:showAsAction="ifRoom" />
 </menu>
