--- a/app/src/main/res/menu/menu_meal_settings.xml
+++ b/app/src/main/res/menu/menu_meal_settings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/option_add_recipe"
         android:title="Add Recipe" />
@@ -7,6 +8,8 @@
     <item
         android:id="@+id/option_delete"
         android:title="Remove Meal"
+        android:icon="@drawable/ic_delete_24dp"
+        app:showAsAction="ifRoom"
         />
 
 </menu>
