--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,13 +1,14 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="41.37931"
-    android:viewportHeight="41.37931"
-    android:tint="@color/colorIcons">
-  <group android:translateX="8.689655"
-      android:translateY="8.689655">
+    android:viewportWidth="47.021942"
+    android:viewportHeight="47.021942"
+    android:tint="#FFFFFF">
+    <group
+        android:translateX="11.510972"
+        android:translateY="11.510972">
       <path
           android:fillColor="#FF000000"
-          android:pathData="M18,2.01L6,2c-1.1,0 -2,0.89 -2,2v16c0,1.1 0.9,2 2,2h12c1.1,0 2,-0.9 2,-2L20,4c0,-1.11 -0.9,-1.99 -2,-1.99zM18,20L6,20v-9.02h12L18,20zM18,9L6,9L6,4h12v5zM8,5h2v3L8,8zM8,12h2v5L8,17z"/>
+          android:pathData="M11,9L9,9L9,2L7,2v7L5,9L5,2L3,2v7c0,2.12 1.66,3.84 3.75,3.97L6.75,22h2.5v-9.03C11.34,12.84 13,11.12 13,9L13,2h-2v7zM16,6v8h2.5v8L21,22L21,2c-2.76,0 -5,2.24 -5,4z" />
   </group>
 </vector>
